# Context-Lang

./: .env.example  .gitignore  .pre-commit-config.yaml  .pypirc.sample  AGENTS.md  CONTRIBUTE.md  Install_Locally.bat  LICENSE  PyPi_PROD.bat  PyPi_TEST.bat  README.md  ROADMAP.md  Readme.md  Roadmap.md  hello_world_precommit_test.py  pyproject.toml  setup.py
reports/: README.md
src/: __init__.py  tag_parser.py
src/context/: Context.py  __init__.py  ast.py  code_generator.py  config.py  file_manager.py  graph.py  llm_process.py  log.py  openai_interface.py  tag_parser.py
test/E2E/: NFT_Staking.sol  NFT_Staking.tsx  NFT_Staking_2.sol  import_test.txt  index.html  style.css
test/E2E/API_TEST/: DataModel.txt  Endpoints.txt  db_models.py  main.py  queries.py  requirements.txt
test/E2E/import_errors_test/: test_duplicates.js  test_file_1.txt  test_file_7.py  test_file_8.py  test_mixed_duplicates.java  test_output_tags.py
test/E2E/import_errors_test/IgnoredFiles/: Ignored1.txt  Ignored2.txt
test/Generator Test/: NFT_Staking.sol  NFT_Staking_2.sol  index.html  main.py  style.css  table with data.csv
test/Generator Test/API_TEST/: BINANCE_DOCS.md  DataModel.txt  Endpoints.txt  Enpoints.txt  MANIFEST.txt  binance.py  data_download_schedule.py  database.db  db.py  db_models.py  generate.bat  main.py  pydantic_models.py  pyproject.toml  queries.py  requirements.txt  test.py
test/Generator Test/import_errors_test/: .gitignore  test_extensive_imports.cs  test_file_3.txt  test_file_4.txt  test_file_6.py  test_file_9.py  test_imports.tsx  test_non_ordered_extensive_imports.cs
test/integration/: README.md  test_import_errors_parser_only.py
test/integration/LLM tests/: README.md  test_graph_openrouter_llm.py  test_openai_interface_llm.py
test/integration/import_errors_test/: run_test.bat  test_extensive_imports.cs  test_file_2.txt  test_file_5.txt  test_file_6.py  test_file_7.py  test_file_8.py  test_file_9.py  test_non_ordered_extensive_imports.cs  test_output_tags.py
test/unittests/: test_ast_prompt_order.py  test_code_generator_apply_code.py  test_configuration_process.py  test_context_happy.py  test_file_manager.py  test_graph.py  test_openai_interface.py  test_tag_parser.py
test/unittests/ASTTests/: conftest.py  test_ast_prompt_order.py  test_ast_prompt_order_legacy_placeholder.py
test/unittests/ASTTests/ASTTestFiles/: cycle.txt  cycle_with_dependent.txt  fan_in.txt  fan_in_three.txt  fan_out_three.txt  multiple_roots_and_fanout.txt  no_dependencies.txt  partial_cycle_with_independent.txt  simple_chain.txt  three_roots_two_dependents.txt  unknown_and_self_placeholders_ignored.txt  workflow_same_target_tag.txt
test/unittests/CodeGeneratorTests/: test_code_generator_edgecases.py  test_code_generator_happy.py  test_code_generator_output_target_code_to_modify.py  test_code_generator_workflow_order.py
test/unittests/CodeGeneratorTests/files/: construct_prompt.txt  output_tags.txt  output_target.txt
test/unittests/TagParserTests/: conftest.py  test_tag_parser.py  test_tag_parser_edgecases.py  test_tag_parser_happy.py
test/unittests/TagParserTests/TagParsingTestFiles/: file_import_missing_payload_main.txt  import_all_duplicate_var_imported.txt  import_all_duplicate_var_main.txt  import_specific_main.txt  import_specific_missing_var_imported.txt  import_specific_missing_var_main.txt  invalid_names.txt  malformed_prompt_closing_missing_slash.txt  malformed_prompt_missing_closing_tag.txt  malformed_prompt_missing_gt_in_open_tag.txt  multiple_global_tags.txt  multiple_prompts_basic.txt  named_context_duplicates.txt  only_context_no_prompts.txt  output_tag_inside_string_literal.txt  placeholder_only_inside_prompt.txt  prompt_output_tag_collides_with_context.txt  prompt_output_target_attempt_other_file_not_imported_main.txt  prompt_output_target_basic.txt  prompt_output_target_double_arrow_not_parsed.txt  prompt_output_target_duplicate_prompt.txt  prompt_output_target_empty_target_not_parsed.txt  prompt_output_target_invalid_syntax_not_parsed.txt  prompt_output_target_invalid_target_name_not_parsed.txt  prompt_output_target_missing_tag_same_file.txt  prompt_output_target_two_prompts_same_target.txt  prompt_output_target_whitespace_around_arrow_not_parsed.txt  prompt_output_target_with_placeholder.txt  prompt_output_target_without_placeholder.txt  prompt_tag_inside_string_literal.txt  prompt_tag_inside_triple_quoted_string.txt  prompt_without_placeholder.txt  unrecognized_colon_tag.txt  unrecognized_colon_tag_inside_string_literal.txt  whitespace_tabs.txt
test/unittests/TagParsingTestFiles/: duplicate_prompts.txt  file_import_main.txt  import_all_imported.txt  import_all_main.txt  import_specific_imported.txt  long_names_template.txt  payload.txt  prompt_output_tags.txt  simple_global_and_prompt.py
