[tool.poetry]
name = "contextlang"
version = "0.1.55"
description = "Cross-platform, AI code generator CLI tool and ContexLang preprocessor"
authors = ["Robert Mazurowski <werfish1@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/werfish/Context-Lang"
documentation = "https://github.com/werfish/Context-Lang"
keywords = ["ai", "code-generation", "cli", "preprocessor"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Environment :: Win32 (MS Windows)",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: Microsoft :: Windows :: Windows 10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Assembly",
  "Programming Language :: Basic",
  "Programming Language :: C",
  "Programming Language :: C#",
  "Programming Language :: C++",
  "Programming Language :: Cython",
  "Programming Language :: Java",
  "Programming Language :: JavaScript",
  "Programming Language :: Kotlin",
  "Programming Language :: Lisp",
  "Programming Language :: Objective C",
  "Programming Language :: PHP",
  "Programming Language :: PL/SQL",
  "Programming Language :: R",
  "Programming Language :: Rust",
  "Programming Language :: SQL",
  "Programming Language :: Visual Basic",
  "Topic :: Software Development :: Code Generators",
  "Topic :: Software Development :: Pre-processors",
]
packages = [{ include = "context", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
requests = ">=2.24.0,<3.0.0"
python-dotenv = ">=0.15.0,<0.20.0"
openai = "^1.104.2"
langgraph = "^0.2.35"
langchain = "^0.3.0"
langchain-openai = "^0.3.0"
tenacity = ">=8.1.0,<10.0.0"
colorama = ">=0.4.3,<1.0.0"
gitignore-parser = "0.1.11"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
ruff = "^0.6.8"
bandit = "^1.7.9"
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
radon = "^6.0.1"

[tool.poetry.scripts]
Context = "context.Context:main"

[tool.pytest.ini_options]
# Prevent pytest from collecting fixture project files that happen to be named like tests.
norecursedirs = [
  "test/E2E",
  "test/integration/import_errors_test",
]
markers = [
  "llm: real LLM/provider integration tests (opt-in, requires network/credentials)",
]

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = [
  "test/E2E",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.bandit]
exclude_dirs = ["test"]
skips = ["B101"]

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
